Fix layout bugs

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -34,7 +34,9 @@ body {
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
   font-kerning: normal;
-  height: 100vh;
+  background-image: url('http://res.cloudinary.com/ericwindmill/image/upload/v1501212538/portfolio_site/background-3.png');
+  background-size: cover;
+  // height: 100vh;
 }
 
 
