--- a/_sass/newHome.scss
+++ b/_sass/newHome.scss
@@ -4,9 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('http://res.cloudinary.com/ericwindmill/image/upload/v1501212538/portfolio_site/background-3.png');
-  background-size: cover;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -43,7 +41,7 @@
       border-bottom: 1px black solid;
     }
 
-    .page-link {
+    .home-page-link {
       color: $text-color;
       line-height: $base-line-height;
       margin: 5px;
